finished project as of 2018-01-17

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,1 @@
-1. Implement Calendar class.
-2. Implement history.csv and it's related methods. 
-3. Enable the user to have access to more than the top 5 movies.
-4. Refine S.O.P statements for clarity and aesthetics.
+1. Implement Calendar class. **unable to complete**
